# strede

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
strede/: Cargo.toml
strede-bench/: Cargo.toml
strede-bench/benches/: json.rs
strede-cbor/: Cargo.toml  README.md
strede-cbor/src/: error.rs  full.rs  impls.rs  lib.rs  tag.rs  token.rs  value.rs  vec.rs
strede-cbor/src/chunked/: access.rs  mod.rs
strede-cbor/tests/: bignum_borrow.rs  container_from_borrow.rs  container_from_owned.rs  deserialize_owned_with_owned.rs  deserialize_with_borrow.rs  enum_borrow.rs  enum_owned.rs  flatten_borrow.rs  flatten_owned.rs  from_field_borrow.rs  from_field_owned.rs  helpers.rs  number_range_borrow.rs  number_range_owned.rs  primitives_borrow.rs  primitives_owned.rs  try_from_field_borrow.rs  try_from_field_owned.rs  value_borrow.rs  value_owned.rs  with_field_borrow.rs  with_field_owned.rs
strede-derive/: Cargo.toml
strede-derive/src/: borrow.rs  common.rs  declare_comms.rs  lib.rs  owned.rs  select_probe.rs
strede-derive/src/borrow/: enum_.rs  mod.rs  struct_.rs
strede-derive/src/owned/: enum_.rs  mod.rs  struct_.rs
strede-json/: Cargo.toml  README.md
strede-json/src/: chunked.rs  error.rs  full.rs  lib.rs  number.rs  value.rs  vec.rs
strede-json/src/chunked/: access.rs  mod.rs  primitives.rs
strede-json/src/number/: decimal_seq.rs  mod.rs  parser.rs
strede-json/src/token/: mod.rs  number_access.rs  str_access.rs  tokenizer.rs
strede-json/tests/: adjacent_tagged_borrow.rs  adjacent_tagged_owned.rs  container_from_borrow.rs  container_from_owned.rs  deserialize_owned_with_owned.rs  deserialize_with_borrow.rs  flatten_borrow.rs  flatten_owned.rs  from_field_borrow.rs  from_field_owned.rs  multi_flatten_borrow.rs  multi_flatten_owned.rs  newtype_borrow.rs  newtype_owned.rs  number_range_borrow.rs  number_range_owned.rs  other_variant_owned.rs  tagged_enum_borrow.rs  tagged_enum_owned.rs  try_from_field_borrow.rs  try_from_field_owned.rs  unit_struct_borrow.rs  unit_struct_owned.rs  value_borrow.rs  value_owned.rs  with_field_borrow.rs  with_field_owned.rs
strede-msgpack/: Cargo.toml  README.md
strede-msgpack/src/: error.rs  ext.rs  full.rs  impls.rs  lib.rs  timestamp.rs  token.rs  value.rs  vec.rs
strede-msgpack/src/chunked/: access.rs  mod.rs
strede-msgpack/tests/: adjacent_tagged_borrow.rs  adjacent_tagged_owned.rs  container_from_borrow.rs  container_from_owned.rs  deserialize_owned_with_owned.rs  deserialize_with_borrow.rs  enum_borrow.rs  enum_owned.rs  ext_borrow.rs  ext_owned.rs  flatten_borrow.rs  flatten_owned.rs  from_field_borrow.rs  from_field_owned.rs  helpers.rs  number_chunks_borrow.rs  number_chunks_owned.rs  primitives_borrow.rs  primitives_owned.rs  struct_borrow.rs  struct_owned.rs  tagged_enum_borrow.rs  tagged_enum_owned.rs  timestamp_borrow.rs  timestamp_owned.rs  try_from_field_borrow.rs  try_from_field_owned.rs  value_borrow.rs  value_owned.rs  with_field_borrow.rs  with_field_owned.rs
strede-postcard/: Cargo.toml  README.md
strede-postcard/src/: error.rs  full.rs  impls.rs  lib.rs  varint.rs  vec.rs
strede-postcard/src/chunked/: access.rs  mod.rs  varint.rs
strede-postcard/tests/: collections.rs  collections_borrow.rs  collections_owned.rs  container_from_borrow.rs  container_from_owned.rs  deserialize_owned_with_owned.rs  deserialize_with_borrow.rs  enums.rs  enums_borrow.rs  enums_owned.rs  from_field_borrow.rs  from_field_owned.rs  helpers.rs  primitives.rs  primitives_borrow.rs  primitives_owned.rs  structs.rs  structs_borrow.rs  structs_owned.rs  tag_miss_borrow.rs  tag_miss_owned.rs  try_from_field_borrow.rs  try_from_field_owned.rs  varint_chunking.rs  with_field_borrow.rs  with_field_owned.rs
strede-test-util/: Cargo.toml
strede-test-util/src/: lib.rs
strede/examples/: expand.rs
strede/src/: borrow.rs  error.rs  impls.rs  lib.rs  map_arm.rs  never.rs  owned.rs  probe.rs  shared_buf.rs  utils.rs
strede/src/enum_arm/: borrow.rs  mod.rs  owned.rs
strede/src/impls/: flat_source.rs  maps.rs  mod.rs  pair_seq_map.rs  sequences.rs  string_enum.rs  strings.rs  tag_flatten.rs  utility.rs
strede/src/map_arm/: borrow.rs  mod.rs  owned.rs
