[workspace]
members = [
    "strede",
    "strede-derive",
    "strede-json",
    "strede-test-util",
    "strede-bench",
]
resolver = "2"

[workspace.dependencies]
arrayvec = { version = "0.7.6", default-features = false }

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/Daniel-Aaron-Bloom/strede"
homepage = "https://github.com/Daniel-Aaron-Bloom/strede"
authors = ["Daniel Bloom"]
categories = ["encoding", "asynchronous", "no-std"]
keywords = ["serde", "async", "deserialize", "streaming", "zero-alloc"]
rust-version = "1.88"

[profile.test]
opt-level = 1

[profile.bench]
lto = true
debug = 1
