[workspace]
members = [
    "strede",
    "strede-derive",
    "strede-json",
    "strede-msgpack",
    "strede-cbor",
    "strede-test-util",
    "strede-bench",
    "strede-postcard",
]
resolver = "2"

[workspace.dependencies]
arrayvec = { version = "0.7.6", default-features = false }
const-array-concat = "0.2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Daniel-Aaron-Bloom/strede"
homepage = "https://github.com/Daniel-Aaron-Bloom/strede"
authors = ["Daniel Bloom"]
categories = ["encoding", "asynchronous", "no-std"]
keywords = ["serde", "async", "deserialize", "streaming", "zero-alloc"]
rust-version = "1.89"

[profile.test]
opt-level = 1

[profile.bench]
lto = true
debug = 1
