[package]
name = "strede-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bench]]
name = "json"
harness = false

[dependencies]
strede = { path = "../strede" }
strede-json = { path = "../strede-json" }
strede-derive = { path = "../strede-derive", features = ["alloc"] }
strede-test-util = { path = "../strede-test-util" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
