[package]
name = "strede-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Derive macros for strede"
readme = "../README.md"

[lib]
proc-macro = true

[features]
alloc = []

[dependencies]
syn  = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
convert_case = "0.11"
