[package]
name = "strede-msgpack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
description = "MessagePack format backend for strede"
readme = "README.md"

[dependencies]
strede = { path = "../strede", version = "=0.2.1" }

[features]
alloc = []

[dev-dependencies]
strede-derive = { path = "../strede-derive", version = "=0.2.1", features = ["alloc"] }
strede-test-util = { path = "../strede-test-util" }
