[package]
name = "strede"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Async, zero-alloc, pull-based deserialization for Rust"
readme = "../README.md"

[features]
default = ["std"]
std = ["alloc"]
alloc = ["strede-derive/alloc"]
rc = []

[dependencies]
strede-derive = { path = "../strede-derive", version = "=0.1.0" }
arrayvec = { workspace = true }
pin-list = { version = "0.1.2", default-features = false }
pin-project = "1.1.11"

[dev-dependencies]
strede-test-util = { path = "../strede-test-util" }
